tests/zutil-inheritance-derive/tests/failure/missing_parent.stderr
error[E0308]: mismatched types
  --> tests/failure/missing_parent.rs:23:1
   |
23 | / zutil_inheritance::value! {
24 | |     struct C(B) {}
25 | |     impl Self {}
26 | | }
   | | ^
   | | |
   | | expected a tuple with 2 elements, found one with 1 element
   | |_arguments to this function are incorrect
   |   this return type influences the call expression's return type
   |
   = note: expected tuple `(BFields, AFields)`
              found tuple `(BFields,)`
note: associated function defined here
  --> $WORKSPACE/zutil-inheritance/src/lib.rs
   |
   |     fn from_fields(base: BaseStorage, fields: Self::Fields) -> Self;
   |        ^^^^^^^^^^^
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/failure/missing_parent.rs:23:1
   |
23 | / zutil_inheritance::value! {
24 | |     struct C(B) {}
25 | |     impl Self {}
26 | | }
   | | ^
   | | |
   | | expected a tuple with 2 elements, found one with 1 element
   | |_arguments to this function are incorrect
   |   this return type influences the call expression's return type
   |
   = note: expected tuple `(BMethods, AMethods)`
              found tuple `(BMethods,)`
note: associated function defined here
  --> $WORKSPACE/zutil-inheritance/src/lib.rs
   |
   |     fn from_methods(base: BaseVTable, methods: Self::Methods) -> Self;
   |        ^^^^^^^^^^^^
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)
